--- a/portfolio.html
+++ b/portfolio.html
@@ -92,7 +92,7 @@
                     </a></li>
                 <li class="card"><a href="">
                         <img src="./images/img(13).jpg" alt="Издание Limited Edition" width="370">
-                        <div class="car-info">
+                        <div class="card-info">
                             <h2 class="title-port">Издание Limited Edition</h2>
                             <p>Дизайн</p>
                         </div>
